# voice-to-cart

./: Leerme.txt  README.md  config.example.yaml  pyproject.toml  requirements.txt
app/: config.py  main.py  schemas.py
app/api/: routes.py  schemas.py
app/cart/: cart.py
app/catalog/: repository.py
app/config/: manager.py
app/llm/: base.py  dummy.py  mock.py
app/processing/: message_processor.py  processor.py
app/services/: cart.py
config/: config.json  config.yaml
data/: catalog.json
tests/: test_endpoints.py  test_processor.py
tests/integration/: test_flow.py
tests/unit/: test_cart.py  test_config.py  test_extractor.py
